[package]
name = "rfind"
authors = ["Kappa <f.cappetti.05@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple clone of the `find` command"
repository = "https://github.com/kappq/rfind"
readme = "README.md"

[dependencies]
regex = "1.5.5"
clap = { version = "3.1.12", features = ["cargo"] }
